# otus-nlp-parsing-bs4

./: .gitignore  README.md  main.py  pyproject.toml
