[tool.poetry]
name = "otus-nlp-parsing-bs4"
version = "0.1.0"
description = ""
authors = ["d0kt0r <work@d0kt0r.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
fake-useragent = "^2.0.3"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
